force-app/main/default/objects/CourseEnrollment__c/CourseEnrollment__c.object-meta.xml
<CustomObject>
    <description>Course enrollments for the attendees</description>
    <label>Course Enrollment</label>
    <nameField>
        <displayFormat>E-{0}</displayFormat>
        <label>EnrollmentId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>