force-app/main/default/objects/CourseEnrollment__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <formula>IF( DaysAttended__c = ScheduledCourseId__r.CourseId__r.RequiredDaysForCert__c, true, false)</formula>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>