force-app/main/default/objects/CourseEnrollment__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>CourseEnrollments</relationshipName>
    <type>Lookup</type>
</CustomField>