force-app/main/default/objects/CourseEnrollment__c/fields/CoursePaymentInfoId__c.field-meta.xml
<CustomField>
    <fullName>CoursePaymentInfoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Payment Info</label>
    <referenceTo>CoursePaymentInfo__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>CourseEnrollments</relationshipName>
    <type>Lookup</type>
</CustomField>