force-app/main/default/objects/CourseEnrollment__c/fields/DaysAttended__c.field-meta.xml
<CustomField>
    <fullName>DaysAttended__c</fullName>
    <label>Days Attended</label>
    <summaryFilterItems>
        <field>CourseAttendance__c.Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CourseAttendance__c.CourseAttendeeEnrollmentId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>