force-app/main/default/objects/CourseEnrollment__c/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>CourseEnrollments</relationshipName>
    <type>Lookup</type>
</CustomField>