force-app/main/default/objects/CourseEnrollment__c/fields/PaymentComplete__c.field-meta.xml
<CustomField>
    <fullName>PaymentComplete__c</fullName>
    <formula>CoursePaymentInfoId__r.InvoicingComplete__c</formula>
    <label>Payment Complete</label>
    <type>Checkbox</type>
</CustomField>