force-app/main/default/objects/CourseEnrollment__c/fields/ScheduledCourseId__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCourseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Course</label>
    <referenceTo>ScheduledCourse__c</referenceTo>
    <relationshipLabel>Course Enrollments</relationshipLabel>
    <relationshipName>CourseEnrollments</relationshipName>
    <type>Lookup</type>
</CustomField>